force-app/main/default/objects/Error_Event__e/Error_Event__e.object-meta.xml
<CustomObject>
    <description>Carries error details out of a failing transaction. publishBehavior=PublishImmediately so the event fires the instant EventBus.publish() is called, regardless of whether the originating DML later rolls back. This is what lets the subscriber write an Error_Log__c even for a rolled-back transaction.</description>
    <label>Error Event</label>
    <pluralLabel>Error Events</pluralLabel>
</CustomObject>