force-app/main/default/objects/Error_Event__e/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>