force-app/main/default/objects/Error_Event__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>Text</type>
    <length>40</length>
</CustomField>