force-app/main/default/objects/Error_Event__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <type>Text</type>
    <length>255</length>
</CustomField>